--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "eventsource": "^2.0.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
+    "@types/eventsource": "^1.1.15",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "@types/uuid": "^9.0.7",
